2013-01-31  Akihiro Sagawa  <sagawa.aki@gmail.com>

	* include/os2_P.h: Added missing commas to fix an ancient bug.

2012-11-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-09-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* include/tables.h, libttf/os2.c: Handle fields present only in
	versions 1 and 2 of OS/2 table.
	* tests/ttfdump.test: Add a test case for OS/2 table.
	* tests/texmfhome.otf (new): Test input.
	* tests/ttfdump.os_2 (new): Expected output.
	* Makefile.am: Adapted.

2012-09-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* include/protos.h: Move prototypes for functions in
	libttf/stack.c from here ...
	* include/stack.h: ... to this new (and unused) file.
	* Makefile.am (EXTRA_DIST): Add the new file.

2012-07-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, configure.ac, include/ttf.h, include/ttfutil.h,
	libttf/font.c, libttf/ttc.c, libttf/ttfutil.c, src/ttfdump.c:
	Use libkpathsea instead of copying xmalloc() & Co (from W32TeX).

	* tests/ttfdump.test [WIN32]: Also test binary mode for stdout.

2012-03-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* include/ttfutil.h: Declare ttfError() with attribute noreturn.

2011-12-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* libttf/otfcommon.c: Improved output strings.

	* include/gpos.h, libttf/gpos.c: Support ValueRecords with
	device parts (ppem dependent fine tuning).

2011-12-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* include/gpos.h (new): GPOS table format.
	* include/gsub.h (new): GSUB table format.
	* include/otftables.h (new): OpenType common table formats.
	* libttf/gpos.c (new): Load, print, and free GPOS table.
	* libttf/gsub.c (new): Load, print, and free GSUB table.
	* libttf/otfcommon.c (new): Handle common table formats.
	* include/loadtable.h, include/tables.h, include/ttf.h,
	libttf/font.c, src/ttfdump.c: Add GPOS and GSUB tables.
	* Makefile.am (libttf_a_SOURCES): Add the new files.